# sub-shader

./: .gitignore  .gitmodules  README.md  README_DIAGNOSTICS.md  audio_input.py  bench_test.py  benchmark.py  cuda_cwt.ipynb  cuda_cwt.py  cuda_wavelet_sand.py  diagnostic_mode.py  fourier.py  main.py  plot_cwt_example.py  plotter.py  psuedo code.txt  pyproject.toml  requirements.txt  subshader.py  token.txt  udemy_sandbox.py  utils.py  wavelet.py
.github/workflows/: update-fps.yml
assets/audio/: README.md
controllers/: main.py
example/: function_list.py
examples/: another_blit_example.py  bubbles_animation.py  clean_up_your_code.py  draw_artist_example.py  imshow_scalogram.py  pcolormesh_contour_example.py  pcolormesh_routine.py  plot_cwt_pcm.py  plot_cwt_pcm_loop.py  pyqtgraph_pcolormesh_loop.py  pyqtgraph_scatterplot_loop.py  reshape_3d_array.py  simple_animation.py  vispy_particle_cloud.py  vispy_realtime.py
examples/ANTS/: README.md
examples/ants/: README.md
examples/cupy/: 01_gpu_acceleration_basics.ipynb  cupy_tutorial.ipynb
examples/gpu_acceleration_basics/: 01_cupy_fft.ipynb  03_gpu_memory.ipynb
logs/: LOGME.md  README.md
models/: audio_input.py  fft_machine.py  file_operations.py  fourier.py  main.py  main_loop.py  wave_play.py  wavelet.py
research/: benchmark.py
research/docs/: research_questions.txt
research/gen_code/: baby_gl.py  chat_subshader.py
research/gpu_basics/: 01_cupy_fft.ipynb  02_numba_cuda.ipynb  03_gpu_memory.ipynb  README.md
utility/: signal_generator.py
views/: blit_manager.py  main.py  plotter.py
(+47 files in other folders)
