[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subshader"
version = "0.1.0"
description = "Real-Time Audio Vizualizer"
authors = [{ name = "Eddie Devlin" }]
dependencies = [
    "numpy", 
    "cupy", 
    "pywavelets", 
    "soundfile", 
    "PyOpenGL", 
    "glfw",
    "pyqtgraph",
    "PyQt5",
    "moderngl>5.6.4"]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]